maven构建项目聚合关系

--- a/workspace/parent/pom.xml
+++ b/workspace/parent/pom.xml
@@ -13,4 +13,7 @@
 			<version>5.1.1.RELEASE</version>
 		</dependency>
 	</dependencies>
+	<modules>
+		<module>child2</module>
+	</modules>
 </project>
